Careers page alignment issue fixed

--- a/scss/pages/_successstories.scss
+++ b/scss/pages/_successstories.scss
@@ -441,6 +441,9 @@ body{
         .careersabout-img {
           position: unset;
           margin-top: 50px;
+          img{
+            width: 100%;
+          }
           .img-fluid {
             max-width: 100%;
           }
@@ -460,7 +463,7 @@ body{
         }
       }
       a.button {
-        padding: 0 20px;
+        padding: 0 60px 0 20px;
         margin-left: 0;
         margin-top: 0;
       }
